--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,13 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
+
 repositories {
     mavenCentral()
     maven { url 'https://repo.spring.io/snapshot' }
